<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ToggleButton
                android:id="@+id/toggle_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/toggle_repeat"
                android:textOn="@string/toggle_repeat"
                android:textSize="10sp"
                android:onClick="toggleRepeat" />

            <ToggleButton
                android:id="@+id/toggle_shuffle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/toggle_shuffle"
                android:textOn="@string/toggle_shuffle"
                android:textSize="10sp"
                android:onClick="toggleShuffle" />

            <ToggleButton
                android:id="@+id/toggle_mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/toggle_mute"
                android:textOn="@string/toggle_mute"
                android:textSize="10sp"
                android:onClick="toggleMute" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/volume_control"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="255"
            android:progress="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <TextView
        android:id="@+id/artist_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="" />

    <TextView
        android:id="@+id/song_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="" />

    <SeekBar
        android:id="@+id/progress_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="66" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/bitrate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="left"
            android:text="" />
        
        <TextView
            android:id="@+id/track_length"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="" />
        
        <TextView
            android:id="@+id/frecuency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5" />

        <ImageButton
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/prev_track"
            android:src="@drawable/previous"
            android:onClick="previous" />

        <ImageButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/play_track"
            android:src="@drawable/play"
            android:onClick="play" />

        <ImageButton
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pause_track"
            android:src="@drawable/pause"
            android:onClick="pause" />

        <ImageButton
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/stop_track"
            android:src="@drawable/stop"
            android:onClick="stop" />

        <ImageButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next_track"
            android:src="@drawable/next"
            android:onClick="next" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5" />
    </LinearLayout>

</LinearLayout>